# axum-wasm-example

./: Cargo.toml  README.md  build_wasm.sh  index.html
pkg/: wasm.d.ts  wasm.js  wasm_bg.wasm  wasm_bg.wasm.d.ts
server/: Cargo.toml
server/src/: main.rs
server/src/view/: layout.rs  mod.rs  root.rs
static/: index.html
wasm/: Cargo.toml
wasm/src/: lib.rs
