[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
maud = { version = "0.27.0", features = ["axum"] }
color-eyre = {workspace = true}
axum = "0.8.4"
tokio = { version = "1.47.1", features = ["rt-multi-thread"] }
wasm = { version = "0.1.0", path = "../wasm" }
tower-http = { version = "0.6.6", features = ["fs"] }
tower = { version = "0.5.2", features = ["util"] }
